--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Web Developer Portfolio</title>
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondar-bg">
         <nav>
             <h3 class="nav-title">Ra<span class="text-primary">bb</span>y</h3>
             <ul>
@@ -23,17 +23,39 @@
             <div class="banner-content">
                 <h4 class="banner-greetings">Hi, I am </h4>
                 <h1 class="banner-title">Fazlay Rabby</h1>
-                <p class="banner-description dark-2" >Shot what able cold new see hold. Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description dark-2" >Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments..</p>
                 <button class="btn-primary">Download</button><button class="btn-primary">Contact</button>
             </div>
             <img class="banner-pic" src="images/My_pic-removebg-preview.png" alt="">
         </div>
 
     </header>
-    <main>
+    <main class="main">
+        <section class="about secondar-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+            <div class="about-item">
+                <p class="item-title">name</p>
+                <p class="item-description">Fazlay Rabby</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Date of birth</p>
+                <p class="item-description">10-11-2004</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Email</p>
+                <p class="item-description">fazlayrabbi1075@gmail.com</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">From</p>
+                <p class="item-description">Chattagram, BD</p>
+            </div>   
 
+        </div>
+        </section>
+        
     </main>
-   
     <footer>
 
     </footer>
